--- a/bites_review_frontend/style.css
+++ b/bites_review_frontend/style.css
@@ -89,4 +89,10 @@ h2, h3 {
 
 ul.comments li {
   border-bottom: 1px solid rgba(196,	217,	233, 1);
+  overflow: auto;
+}
+ul.comments span{
+  float:right;
+  font-size: .75rem;
+  opacity: 0.5;
 }
