Add Search Icon

--- a/bites_review_frontend/reset.css
+++ b/bites_review_frontend/reset.css
@@ -180,8 +180,12 @@ hr {
 
 input,
 select {
-    vertical-align: middle;
-    font: inherit;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: inherit;
+  font-feature-settings: inherit;
+  font-style: inherit;
+  vertical-align: middle;
 }
 
 html {
