--- a/bites_review_frontend/style.css
+++ b/bites_review_frontend/style.css
@@ -2,6 +2,7 @@
   display: none;
 }
 body {
+  font-family: "Open Sans";
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -9,7 +10,6 @@ body {
     "search search"
     "menu item";
     background-color:rgba(196,	217,	233, .5);
-    font-family: "Open Sans";
 }
 
 #menu {
@@ -24,9 +24,12 @@ body {
 }
 #search {
   grid-area: search-form;
+  display: block;
   padding: 20vh 0;
   width: 50%;
+  font-variant: normal;
   font-size: 1.5rem;
+  line-height: 1;
   margin: auto;
 }
 #search-bar {
@@ -34,25 +37,12 @@ body {
   display: grid;
   grid-template-areas: "logo search-form .";
   grid-template-columns: 1fr 5fr 1fr;
-
-  align-self: center;
   background-image: url("https://images.unsplash.com/photo-1497888329096-51c27beff665?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1351&q=80");
   background-size: cover;
   width: 100%;
 }
 form {
 }
-/* body::after {
-  content: "";
-  background-color: #555;
-  opacity: 0.5;
-  width: 100vw;
-  height: 100vh;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-} */
 
 ul {
   list-style: none;
@@ -68,7 +58,6 @@ li {
 
 section {
   padding: 1rem;
-
 }
 h2 {
   font-size: 1.75rem;
@@ -79,12 +68,9 @@ h2, h3 {
 }
 #items-ul {
   max-width: 70%;
-
 }
-
 #items-ul li:hover {
   background-color: green;
-
 }
 
 ul.comments li {
@@ -95,4 +81,35 @@ ul.comments span{
   float:right;
   font-size: .75rem;
   opacity: 0.5;
+}
+#search input[type="text"] {
+  display: block;
+  float: left;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+input[type="text"] {
+  margin: 0;
+  line-height: 1.5;
+  padding: 0 1rem;
+  border: 0;
+  border-radius: 50px;
+}
+#search button[type="submit"] {
+  float: left;
+  display: block;
+  padding: 0 .25rem;
+  margin: 0;
+  height: 2.25rem;
+  width: 2.25rem;
+  border: 0;
+  border-radius: 100%;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+#search button[type="submit"]:active {
+  opacity: .8;
+}
+#search button[type="submit"] img {
+  height: 100%;
 }
